# azure_databricks_template

./: .gitignore  README.md  copier.yml  secrets.conf.jinja
infrastructure/: delta_lake.bicep  deploy_infra.ps1
utils/: env_setup.ps1.jinja
{{project_name}}/: main.py  pyproject.toml
